html file modified

--- a/Tailwind-Starter/index.html
+++ b/Tailwind-Starter/index.html
@@ -31,20 +31,25 @@
     <img class="block mx-auto h-24 rounded-full sm:mx-0 sm:shrink-0" src="img/erin-lindford.jpg" alt="Женское лицо" />
     <div class="text-center space-y-2 sm:text-left">
       <div class="space-y-0.5">
-        <p class="text-lg text-black font-semibold">
-          Эрин Линдфорд
+        <p class="px-8 text-lg text-black font-semibold">
+          Evan McDan
         </p>
-        <p class="text-slate-500 font-medium">
-          Инженер по продукту
+        <p class="px-8 text-slate-500 font-medium">
+          Product engeneer
         </p>
+        <button class="px-8 py-1 text-sm text-purple-600 rounded-full border border-purple-200 hover:text-white hover:bg-purple-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2">
+          Product engeneer
+        </button>
+        <button class="px-8 py-1 text-sm text-purple-600 font-semibold rounded-full border border-purple-200 hover:text-white hover:bg-purple-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2">Obsah</button>
+
       </div>
-      <button class="px-4 py-1 text-sm text-purple-600 font-semibold rounded-full border border-purple-200 hover:text-white hover:bg-purple-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2">Сообщение</button>
+
     </div>
   </div>
   <div class="max-w-3xl mx-auto pt-10 xl:max-w-none xl:ml-0 xl:mr-[15.5rem] xl:ml-[15.5rem] xl:pr-16">
-    <h1 class="text-2xl sm:text-4xl font-extrabold text-slate-900 tracking-tight dark:text-slate-200 mt-10">Создай новый мир с Tailwind</h1>
+    <h1 class="text-2xl sm:text-4xl font-extrabold text-slate-900 tracking-tight dark:text-slate-200 mt-10">Vytvor nový svet s Tailwind 4</h1>
     <div class="relative z-20 prose mt-8 dark:text-slate-400">
-      <p>Далеко-далеко <a href="#" class="underline text-accent">за словесными</a> горами в стране гласных и согласных живут рыбные тексты. Lorem скатился прямо продолжил бросил заглавных реторический на берегу, коварный за свое, родного которой. Букв рыбными правилами проектах домах речью дороге.</p>
+      <p>Ďaleko - ďaleko <a href="#" class="underline text-accent">za slovnými horami<a> v krajine samohlások a spoluhláskok žijú rybné texty. Lorem sa zvalil priamo, pokračoval, hodil veľké písmená na breh, zradný za svoje, rodné, ktoré. Písmená s rybami pravidlami projektov domov rečou ceste.</p>
     </div>
     <img class="mt-10 rounded-xl" src="img/erin-lindford.jpg" alt="Alt">
   </div>
