--- a/Tailwind-Starter/index.html
+++ b/Tailwind-Starter/index.html
@@ -28,7 +28,7 @@
   </div>
 
   <div class="component-example mt-10 py-8 px-8 max-w-sm mx-auto bg-white rounded-xl shadow-lg space-y-2 sm:py-4 sm:flex sm:items-center sm:space-y-0 sm:space-x-6">
-    <img class="block mx-auto h-24 rounded-full sm:mx-0 sm:shrink-0" src="img/erin-lindford.jpg" alt="Женское лицо" />
+    <img class="p-4 block mx-auto h-24 rounded-full sm:mx-0 sm:shrink-0" src="img/erin-lindford.jpg" alt="Женское лицо" />
     <div class="text-center space-y-2 sm:text-left">
       <div class="space-y-0.5">
         <p class="px-8 text-lg text-black font-semibold">
