--- a/Vite-HTML/src/second.html
+++ b/Vite-HTML/src/second.html
@@ -11,8 +11,12 @@
 
 </head>
 <body>
+  <div class="container">
 
-  Example page
+    <img class="header-img" src="assets/img/example/preview.jpg" alt="Vite Startup Template" style="width: 100%"><br><br>
+    <h1 class="heading">Welcome to second <span class="accent">Vite</span> page template!</h1>
+    <p>Second page lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam reprehenderit nulla alias expedita a qui, pariatur doloremque ipsa fugit laboriosam odio iure recusandae laborum delectus praesentium magni reiciendis voluptatem.</p>
 
+  </div>
 </body>
 </html>
