--- a/Simple-Starter/index.html
+++ b/Simple-Starter/index.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" href="assets/images/favicon.png">
-  <meta property="og:image" content="img/preview.jpg">
+  <meta property="og:image" content="public/images/preview.jpg">
 
   <link rel="stylesheet" href="styles/index.css">
   <script type="module" src="scripts/main.js"></script>
@@ -33,19 +33,19 @@
         </div>
       </div>
       <div class="col-2 col-sm-6 d-flex flex-column align-items-end justify-content-center">
-        <div class="menu"><button>🔥</button></div>
+        <div class="toggler"><button></button></div>
       </div>
     </div>
   </div>
   <hr>
   <div class="container">
     <div class="row row-cols-xl-2">
-      <div class="col-sm-12 col-lg-4 order-sm-last">
+      <div class="col-sm-12 col-lg-4 order-md-last">
         <h2 class="header">Simple Starter</h2>
         <span class="accent">Simple Starter</span>. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae quos ab, incidunt hic recusandae animi amet consectetur.
         <blockquote>Nesciunt fugiat ipsa velit nobis, quam corrupti veritatis, perferendis facere et odit autem corporis molestias recusandae adipisicing.</blockquote>
       </div>
-      <div class="col-sm-12 col-lg-8 order-sm-first order-lg-first">
+      <div class="col-sm-12 col-lg-8 order-lg-first">
         <img class="image image-dark" src="public/images/preview.png" alt="Image Example" loading="lazy">
         <img class="image image-light" src="public/images/preview-light.png" alt="Image Example" loading="lazy">
       </div>
